feat: you can now import auorora kilter data
